--- a/JenkinsFile
+++ b/JenkinsFile
@@ -136,7 +136,7 @@ def statusCheck (status,sfdxHome) {
         println jsonUp
 
         def usJobId = jsonUp.result.id.toString().replace("]", "").replace("[", "")
-        println
+        println usJobId
         
         def res = bat (returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:status -i '${usJobId}'")
         println res
