--- a/readFile-config.yml
+++ b/readFile-config.yml
@@ -11,7 +11,7 @@ credentials:
   Env2:
     server_url: "https://curious-koala-cek3d-dev-ed.my.salesforce.com"
     username: "teter.filip@curious-koala-cek3d.com"
-    connapp_consumerkey_id: "connectedAppConsumerKey"
+    connapp_consumerkey_id: "connectedAppConsumerKjgey"
     cred_id: "e34e098b-73bb-4c92-aaa3-d1feb4f6cd66"
   Env3:
     server_url: "https://curious-koala-cek3d-dev-ed.my.salesforce.com"
